<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.ocrjizhang.ui.auth.SplashFragment"
        android:label="@string/page_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ocrjizhang.ui.auth.LoginFragment"
        android:label="@string/page_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.ocrjizhang.ui.auth.RegisterFragment"
        android:label="@string/page_register" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.ocrjizhang.ui.home.HomeFragment"
        android:label="@string/page_home">
        <action
            android:id="@+id/action_homeFragment_to_transactionEditorFragment"
            app:destination="@id/transactionEditorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_ocrFragment"
            app:destination="@id/ocrFragment" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.ocrjizhang.ui.statistics.StatisticsFragment"
        android:label="@string/page_statistics" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.ocrjizhang.ui.profile.ProfileFragment"
        android:label="@string/page_profile" />

    <fragment
        android:id="@+id/transactionEditorFragment"
        android:name="com.example.ocrjizhang.ui.transaction.TransactionEditorFragment"
        android:label="@string/page_transaction_editor" />

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.ocrjizhang.ui.category.CategoryFragment"
        android:label="@string/page_category" />

    <fragment
        android:id="@+id/ocrFragment"
        android:name="com.example.ocrjizhang.ui.ocr.OcrFragment"
        android:label="@string/page_ocr" />
</navigation>
